@@ -1,3 +1,7 @@
+xfsprogs-2.8.15 (19 October 2006)
+	- Fix up nlink checks and repairs in phase 7 for xfs_repair.
+	- Remove a bogus LEAFN warning for a single leaf node v2 dir.
+	
 xfsprogs-2.8.14 (6 October 2006)
 	- Fix up the ring command in xfs_db,
 	  thanks to Utako Kusaka
